# typewriter

./: CMakeLists.txt  LICENSE  README.en.md  README.md  grabber.sh  main.c  meson.build  run.fenglu.typewriter.json
application/: typewriterapp.c  typewriterapp.h  typewriterwin.c  typewriterwin.h
data/: meson.build  run.fenglu.typewriter.desktop.in  run.fenglu.typewriter.gschema.xml  run.fenglu.typewriter.metainfo.xml.in  run.fenglu.typewriter.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: list_qq_win.scpt  main.c  meson.build  qq-group-item.c  qq-group-item.h  qq-group-util.c  qq-group-util.h  qq_group_item.c  qq_group_item.h  typewriter-application.c  typewriter-application.h  typewriter-input.c  typewriter-input.h  typewriter-load-article.c  typewriter-load-article.h  typewriter-ui.c  typewriter-ui.h  typewriter-window.c  typewriter-window.h  typewriter-window.ui  typewriter.gresource.xml  x11-util.c  x11-util.h  x11_util.c  x11_util.h
src/gtk/: help-overlay.ui
src/theme/: meson.build  style.css  theme.gresource.xml
